# Livekit_s2s

./: pyproject.toml
livekit-agents/livekit/agents/voice/: agent_activity.py
livekit-plugins/livekit-plugins-openai/livekit/plugins/: __init__.py
livekit-plugins/livekit-plugins-openai/livekit/plugins/openai/realtime/: realtime_model.py
