[tool.uv]
constraint-dependencies = ['onnxruntime<1.20.0; python_version == "3.9"']

[tool.uv.sources]
livekit-agents = { workspace = true }
livekit-plugins-anthropic = { workspace = true }
livekit-plugins-assemblyai = { workspace = true }
livekit-plugins-aws = { workspace = true }
livekit-plugins-azure = { workspace = true }
livekit-plugins-cartesia = { workspace = true }
livekit-plugins-clova = { workspace = true }
livekit-plugins-deepgram = { workspace = true }
livekit-plugins-elevenlabs = { workspace = true }
livekit-plugins-fal = { workspace = true }
livekit-plugins-google = { workspace = true }
livekit-plugins-lmnt = { workspace = true }
livekit-plugins-nltk = { workspace = true }
livekit-plugins-openai = { workspace = true }
livekit-plugins-rime = { workspace = true }
livekit-plugins-silero = { workspace = true }
livekit-plugins-speechmatics = { workspace = true }
livekit-plugins-turn-detector = { workspace = true }
livekit-plugins-neuphonic = { workspace = true }
livekit-plugins-playai = { workspace = true }
livekit-plugins-groq = { workspace = true }
livekit-plugins-gladia = { workspace = true }
livekit-plugins-resemble = { workspace = true }
livekit-plugins-bey = { workspace = true }
livekit-plugins-bithuman = { workspace = true }
livekit-plugins-speechify = { workspace = true }
livekit-plugins-tavus = { workspace = true }
livekit-plugins-hume = { workspace = true }
livekit-plugins-spitch = { workspace = true }

[tool.uv.workspace]
members = ["livekit-plugins/*", "livekit-agents"]
exclude = ["livekit-plugins/livekit-plugins-browser"]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
    "mypy",
    "pytest",
    "ruff",
    "pytest-asyncio>=0.25.3",
    "jiwer>=3.1.0",
    "scipy>=1.13.1",
    "tiktoken>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".github"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["livekit"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--import-mode=importlib", "--ignore=examples"]


[tool.mypy]
strict = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.genai"
follow_imports = "normal"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "boto3"
follow_untyped_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-agents"
dynamic = ["version"]
description = "A powerful framework for building realtime voice AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "LiveKit", email = "hello@livekit.io" }]
keywords = ["webrtc", "realtime", "audio", "video", "livekit", "agents", "AI"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click~=8.1",
    "livekit>=1.0.7,<2",
    "livekit-api>=1.0.2,<2",
    "livekit-protocol~=1.0",
    "protobuf>=3",
    "pyjwt>=2.0",
    "types-protobuf>=4,<5",
    "watchfiles>=1.0",
    "psutil>=7.0",
    "aiohttp~=3.10",
    "typing-extensions>=4.12",
    "sounddevice>=0.5",
    "docstring_parser>=0.16",
    "eval-type-backport",
    "colorama>=0.4.6",
    "av>=12.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0,<3",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.6.0, <2; python_version >= '3.10'"]
codecs = ["av>=12.0.0", "numpy>=1.26.0"]
images = ["pillow>=10.3.0"]
aws = ["livekit-plugins-aws>=1.0.22"]
neuphonic = ["livekit-plugins-neuphonic>=1.0.22"]
playai = ["livekit-plugins-playai>=1.0.22"]
turn-detector = ["livekit-plugins-turn-detector>=1.0.22"]
assemblyai = ["livekit-plugins-assemblyai>=1.0.22"]
rime = ["livekit-plugins-rime>=1.0.22"]
nltk = ["livekit-plugins-nltk>=1.0.22"]
anthropic = ["livekit-plugins-anthropic>=1.0.22"]
openai = ["livekit-plugins-openai>=1.0.22"]
groq = ["livekit-plugins-groq>=1.0.22"]
elevenlabs = ["livekit-plugins-elevenlabs>=1.0.22"]
azure = ["livekit-plugins-azure>=1.0.22"]
fal = ["livekit-plugins-fal>=1.0.22"]
clova = ["livekit-plugins-clova>=1.0.22"]
deepgram = ["livekit-plugins-deepgram>=1.0.22"]
silero = ["livekit-plugins-silero>=1.0.22"]
cartesia = ["livekit-plugins-cartesia>=1.0.22"]
speechmatics = ["livekit-plugins-speechmatics>=1.0.22"]
google = ["livekit-plugins-google>=1.0.22"]
gladia = ["livekit-plugins-gladia>=1.0.22"]
resemble = ["livekit-plugins-resemble>=1.0.22"]
bey = ["livekit-plugins-bey>=1.0.22"]
bithuman = ["livekit-plugins-bithuman>=1.0.22"]
speechify = ["livekit-plugins-speechify>=1.0.22"]
tavus = ["livekit-plugins-tavus>=1.0.22"]
hume = ["livekit-plugins-hume>=1.0.22"]
lmnt = ["livekit-plugins-lmnt>=1.0.22"]

[project.urls]
Documentation = "https://docs.livekit.io"
Website = "https://livekit.io/"
Source = "https://github.com/deadshot1928/Livekit_s2s"

[tool.hatch.version]
path = "livekit-agents/livekit/agents/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit-agents/livekit"]
include = ["livekit-agents/livekit/agents/resources/*", "livekit-agents/livekit/agents/debug/index.html"]

[tool.hatch.build.targets.sdist]
include = ["/livekit-agents/livekit"]
